syntax = "proto3";

import "DTO/timer_settings.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.TimerSettings";

message GetTimerSettingsRequestProto {
  TraceDataProto traceData = 1;
}

message IsTimerSettingExistingRequestProto {
  TraceDataProto traceData = 1;
}

message TimerSettingExistsProto {
  bool exists = 1;
}

service TimerSettingsProtoRequestService {
  rpc GetTimerSettings(GetTimerSettingsRequestProto) returns (TimerSettingsProto);
  rpc IsTimerSettingExisting(IsTimerSettingExistingRequestProto) returns (TimerSettingExistsProto);
}
